<?xml version="1.0"?>
<package format="2">
  <name>vo_estimator</name>
  <version>0.0.0</version>
  <description>Description</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="mfallon@robots.ox.ac.uk">Maurice Fallon</maintainer>
  <author email="mfallon@robots.ox.ac.uk">Maurice Fallon</author>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>

  <depend>cv_bridge</depend>  
  <depend>pronto_vis</depend>  
  <depend>image_io_utils</depend>    
  <depend>pronto_conversions</depend>
  <depend>bot2_frames_cpp</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export />
</package>
