<?xml version="1.0"?>
<package>
  <name>vo_estimator</name>
  <version>0.0.0</version>
  <description>Description</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="mfallon@robots.ox.ac.uk">Maurice Fallon</maintainer>
  <author email="mfallon@robots.ox.ac.uk">Maurice Fallon</author>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bot2_frames_cpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_io_utils</build_depend>
  <build_depend>pronto_conversions</build_depend>
  <build_depend>pronto_vis</build_depend>
  <build_depend>pronto_lcmtypes</build_depend>
  <build_depend>reg_lcmtypes</build_depend>  
  <build_depend>bot_core_lcmtypes</build_depend>  
  <build_depend>ori_lcmtypes</build_depend>  
  <run_depend>bot2_frames_cpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_io_utils</run_depend>
  <run_depend>pronto_conversions</run_depend>
  <run_depend>pronto_vis</run_depend>
  <run_depend>pronto_lcmtypes</run_depend>
  <run_depend>reg_lcmtypes</run_depend>
  <run_depend>bot_core_lcmtypes</run_depend>
  <run_depend>ori_lcmtypes</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export />
</package>
