<?xml version="1.0"?>
<package format="2">
  <name>fovis_msgs</name>
  <version>0.0.0</version>
  <description>Custom FOVIS messages</description>

  <maintainer email="mfallon@robots.ox.ac.uk">Maurice Fallon</maintainer>
  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri </maintainer>

  <license>LGPLv2.1</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
