<?xml version="1.0"?>
<package>
  <name>fovis_ros</name>
  <version>0.0.0</version>
  <description>Description</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="mfallon@robots.ox.ac.uk">Maurice Fallon</maintainer>
  <author email="mfallon@robots.ox.ac.uk">Maurice Fallon</author>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bot_frames_cpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_io_utils</build_depend>
  <build_depend>pronto_conversions</build_depend>
  <build_depend>bot_param</build_depend>  
  <build_depend>fovis</build_depend>
  <build_depend>concise_args</build_depend>
  <build_depend>path_util</build_depend>
  <build_depend>estimate_pose</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>fovis_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>bot_frames_cpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_io_utils</run_depend>
  <run_depend>pronto_conversions</run_depend>
  <run_depend>bot_param</run_depend>
  <run_depend>fovis</run_depend>
  <run_depend>concise_args</run_depend>
  <run_depend>path_util</run_depend>
  <run_depend>estimate_pose</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>fovis_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export />
</package>
