<?xml version="1.0"?>
<package format="2">
  <name>fovis_ros</name>
  <version>0.0.0</version>
  <description>ROS wrapper for FOVIS</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="mfallon@robots.ox.ac.uk">Maurice Fallon</maintainer>
  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <author email="mfallon@robots.ox.ac.uk">Maurice Fallon</author>

  <license>LGPLv2.1</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>fovis</depend>
  <!--depend>estimate_pose</depend-->
  <depend>image_transport</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>fovis_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>eigen_utils</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export />
</package>
